<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCFFFFFF"
    android:visibility="visible" >

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:elevation="10dp"
        android:padding="24dp"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="48dp"

            android:autofillHints="emailAddress"
            android:hint="@string/email"
            android:inputType="textEmailAddress"

            android:layout_marginBottom="16dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="24dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingEnd="48dp"
                android:layout_alignParentStart="true" />

            <ImageButton
                android:id="@+id/togglePasswordVisibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_view"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/toggle_password_visibility" />
        </RelativeLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/login"
            android:backgroundTint="#2196F3"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signUpButton"

            android:text="@string/sign_up"
            android:backgroundTint="#2196F3"

            android:layout_marginTop="8dp"/>
    </LinearLayout>
</RelativeLayout>